--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
 channel = "nightly-2022-12-07"
-components = ["rust-src", "llvm-tools-preview"]
+components = ["rust-src", "llvm-tools-preview", "rustfmt", "clippy"]
 targets = ["thumbv7em-none-eabihf"]
 profile = "minimal"
